--- a/indextoinen.html
+++ b/indextoinen.html
@@ -49,7 +49,7 @@
 
 	    <div class="carousel-inner" role="listbox">
 	      <div class="item active">
-	          <img src="https://images.unsplash.com/photo-1535525153412-5a42439a210d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
+	          <img src="https://images.unsplash.com/photo-1535525153412-5a42439a210d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"  style="width:100%" alt="kuva">
 	 <div class="carousel-caption">
 	          <h3>Haluatko oppia shufflaamaan?</h3>
 	          <p>Shuffletunnit Helsingissä ja Vantaalla</p>
@@ -58,7 +58,7 @@
 	
 
 	      <div class="item">
-	   <img src="https://images.unsplash.com/photo-1508700929628-666bc8bd84ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
+	   <img src="https://images.unsplash.com/photo-1508700929628-666bc8bd84ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"  style="width:100%" alt="kuva">
 	        <div class="carousel-caption">
 	          <h3>ALKEISTUNNIT</h3>
 	          <p>"“Minulla ei ollut ollenkaan tanssitaustaa aikaisemmin, joten jännitti tulla ensimmäiselle tunnille. 
@@ -68,7 +68,7 @@
 	        </div>      
 	      </div>
 	      <div class="item">
-	      <img src="https://images.unsplash.com/photo-1621976360623-004223992275?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1128&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
+	      <img src="https://images.unsplash.com/photo-1621976360623-004223992275?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1128&q=80"  style="width:100%" alt="kuva">
 	
 
 	        <div class="carousel-caption">
@@ -184,4 +184,4 @@
 	
 
 	</body>
-	</html
+</html>
